added panels to add new client

--- a/cm_ui/components.qrc
+++ b/cm_ui/components.qrc
@@ -6,5 +6,7 @@
         <file alias="CommandBar.qml">components/CommandBar.qml</file>
         <file alias="CommandButton.qml">components/CommandButton.qml</file>
         <file alias="StringEditorSingleLine.qml">components/StringEditorSingleLine.qml</file>
+        <file alias="Panel.qml">components/Panel.qml</file>
+        <file alias="AddressEditor.qml">components/AddressEditor.qml</file>
     </qresource>
 </RCC>
