added support for editing client

--- a/cm_ui/components.qrc
+++ b/cm_ui/components.qrc
@@ -8,5 +8,6 @@
         <file alias="StringEditorSingleLine.qml">components/StringEditorSingleLine.qml</file>
         <file alias="Panel.qml">components/Panel.qml</file>
         <file alias="AddressEditor.qml">components/AddressEditor.qml</file>
+        <file alias="SearchResultDelegate.qml">components/SearchResultDelegate.qml</file>
     </qresource>
 </RCC>
